# p12-oc-python

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
epicevents/app/: config.py  database.py
epicevents/app/auth/: __init__.py  models.py  service.py  utils.py
epicevents/app/models/: __init__.py  client.py  contract.py  event.py
epicevents/app/repositories/: __init__.py  base.py  client_repo.py  contract_repo.py  event_repo.py
epicevents/app/services/: __init__.py  client_service.py  contract_service.py  event_service.py
epicevents/app/utils/: __init__.py  logging.py  permissions.py
epicevents/cli/: auth_commands.py  client_commands.py  contract_commands.py  event_commands.py  main.py  user_commands.py
epicevents/scripts/: init_db.py
epicevents/tests/: conftest.py
epicevents/tests/integration/: test_cli_commands.py  test_database.py  test_permissions.py  test_workflow.py
epicevents/tests/unit/: test_auth.py  test_models.py  test_repositories.py  test_services.py  test_utils.py
